fixed js and css minor element alignment

--- a/Resources/public/css/rz-theme.css
+++ b/Resources/public/css/rz-theme.css
@@ -82,3 +82,7 @@
     word-break:break-all;
 }
 
+
+.rz-cms-admin .tooltip {
+    z-index: 9999;
+}
